# VST_2_VizBeats

./: .gitignore  CLIENT_TEST_PLAN.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
